--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "dependencies": {
     "express": "^4.16.2",
     "express3-handlebars": "^0.5.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4"
   }
 }
