--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "jshint": "^2.9.5",
-    "mocha": "^5.0.4"
+    "mocha": "^5.0.4",
+    "morgan": "^1.9.0"
   }
 }
