--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
-    "express3-handlebars": "^0.5.2"
+    "express-handlebars": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
