--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
+    "gulp-jshint": "^2.1.0",
     "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "mocha": "^5.0.4",
     "morgan": "^1.9.0"
   }
