--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.1.0",
     "jshint": "^2.9.5",
