--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "mocha": "^5.0.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nock": "^9.2.3"
   }
 }
