--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test-ut": "mocha test/ut",
     "test-it": "mocha --exit test/it",
-    "jshint": "gulp jshint"
+    "jshint": "gulp jshint",
+    "karma": "karma start karma.conf.js"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -19,6 +20,10 @@
     "gulp-jshint": "^2.1.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
+    "karma": "^2.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
     "mocha": "^5.0.4",
     "morgan": "^1.9.0",
     "nock": "^9.2.3"
