--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test-ut": "mocha test/ut",
+    "test-ut": "mocha test/ut/**/*.js",
     "test-it": "mocha --exit test/it",
     "jshint": "gulp jshint",
     "karma": "karma start karma.conf.js"
   },
   "dependencies": {
     "express": "^4.16.2",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "node-mocks-http": "^1.5.8"
   },
   "devDependencies": {
     "chai": "^4.1.2",
